NewsPaper/logs/errors.log
2023-04-30 11:24:07 [ERROR] /Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/utils/log.py:241 - Internal Server Error: /news/
Traceback (most recent call last):
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/core/handlers/exception.py", line 56, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/core/handlers/base.py", line 220, in _get_response
    response = response.render()
               ^^^^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/response.py", line 90, in rendered_content
    template = self.resolve_template(self.template_name)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/response.py", line 72, in resolve_template
    return select_template(template, using=self.using)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/loader.py", line 42, in select_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/backends/django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/engine.py", line 175, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/loaders/base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/base.py", line 200, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/base.py", line 514, in parse
    self.extend_nodelist(nodelist, compiled_result, token)
  File "/Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/template/base.py", line 531, in extend_nodelist
    raise self.error(
django.template.exceptions.TemplateSyntaxError: <ExtendsNode: extends 'flatpages/default.html'> must be the first tag in the template.
2023-04-30 11:24:07 [ERROR] /Users/aleksandr/PycharmProjects/ProjectD9/venv/lib/python3.11/site-packages/django/core/servers/basehttp.py:187 - "GET /news/ HTTP/1.1" 500 143260
